# ManT

./: .gitignore  README.md  bunfig.toml  codecov.yml  package.json  tsconfig.base.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
apps/mantui/: package.json  tsconfig.json
apps/mantui/scripts/: real-smoke.tsx
apps/mantui/src/cli/: arguments.ts  run.ts
apps/mantui/src/native/: client.ts  process.ts  schema.ts
apps/mantui/src/ui/: Pre.tsx  app.tsx  block-content.tsx  ids.ts  manual-sidebar.tsx  (+9 more)
docs/: development.md  releasing.md
docs/architecture/: native-core.md
docs/manuals/: mant.md  mantui.md
engine/: Cargo.toml
engine/crates/libmandoc-rs/: Cargo.toml  THIRD_PARTY_NOTICES.md
engine/crates/mant-ast/: Cargo.toml
engine/crates/mant-core/: Cargo.toml
engine/crates/mant-core/src/: definitions.rs  groff_html.rs  lib.rs  projection.rs  query.rs  search.rs  source.rs
engine/crates/mant-core/src/mandoc/: blocks.rs  diagnostics.rs  inline.rs  layout.rs  mod.rs  navigation.rs
engine/crates/mant-core/src/markdown/: blocks.rs  inline.rs  layout.rs  mod.rs  options.rs  source.rs  tests.rs
engine/crates/mant-core/src/output/: json.rs  mod.rs  search.rs  text.rs
engine/crates/mant-core/src/output/markdown/: blocks.rs  inline.rs  mod.rs  tests.rs
engine/crates/mant-core/src/search/: owners.rs
engine/crates/mant-core/src/tldr/: cache.rs  mod.rs  parser.rs  update.rs
engine/crates/mant-core/tests/: inline_terms.rs  self_manuals.rs  subsection_only.rs
engine/crates/mant-core/tests/archlinux/: fixtures.rs  gawk.rs  gcc.rs  git.rs  main.rs  rsync.rs
engine/crates/mant-core/tests/common/: mod.rs
engine/crates/mant-core/tests/debian/: fixtures.rs  groff_man_style.rs  groff_me.rs
engine/crates/mant-core/tests/fedora44/: fixtures.rs  gawk.rs  main.rs  rsync.rs  tar.rs
native/: Cargo.toml
native/crates/libmandoc-rs/: Cargo.toml  README.md  build.rs
native/crates/libmandoc-rs/patches/: series
native/crates/libmandoc-rs/scripts/: sync-vendor
native/crates/libmandoc-rs/shim/: mant_mandoc_shim.c  mant_mandoc_shim.h
native/crates/libmandoc-rs/src/: build_config.rs  lib.rs  parser.rs
native/crates/libmandoc-rs/tests/: 0001.nf-hash-heading.roff
native/crates/mant/: Cargo.toml
native/crates/mant-ast/: Cargo.toml
native/crates/mant-ast/src/: document.rs  lib.rs  outline.rs  query.rs  schema.rs  search.rs  tldr.rs
native/crates/mant-ast/tests/: contract.rs  json_schema.rs  outline_contract.rs
native/crates/mant-cli/: Cargo.toml
native/crates/mant-cli/src/: arguments.rs  lib.rs  main.rs  mcp.rs
native/crates/mant-cli/tests/: mcp_stdio.rs  process.rs
native/crates/mant-core/: Cargo.toml
native/crates/mant-core/src/: definitions.rs  groff_html.rs  lib.rs  projection.rs  query.rs  search.rs  source.rs
native/crates/mant-core/src/mandoc/: blocks.rs  diagnostics.rs  inline.rs  layout.rs  mod.rs  navigation.rs
native/crates/mant-core/src/output/: json.rs  mod.rs  search.rs  text.rs
native/crates/mant-core/src/output/markdown/: blocks.rs  inline.rs  mod.rs  tests.rs
native/crates/mant-core/src/tldr/: cache.rs  mod.rs  parser.rs  update.rs
native/crates/mant-core/tests/: real_manuals.rs
native/crates/mant-core/tests/archlinux/: clang.rs  fixtures.rs  ls.rs  tar.rs
native/crates/mant-core/tests/common/: mod.rs
native/crates/mant-core/tests/debian/: fixtures.rs  main.rs  mt_gnu.rs
native/crates/mant-core/tests/fedora44/: clang.rs  fixtures.rs  gcc.rs  git.rs  tar.rs
native/crates/mant-mandoc-sys/: Cargo.toml  build.rs
native/crates/mant-mandoc-sys/config/: linux-gnu.h  macos.h
native/crates/mant-mandoc-sys/shim/: mant_mandoc_shim.c  mant_mandoc_shim.h
native/crates/mant-mandoc-sys/src/: build_config.rs  ffi.rs  lib.rs
native/crates/mant-napi/: Cargo.toml
native/crates/mant-napi/src/: lib.rs
native/crates/mant/src/: arguments.rs  mcp.rs
native/crates/mant/tests/: mcp_stdio.rs  process.rs
native/mandoc-json/: README.md  mant-mandoc-json.c
scripts/: build-mandoc-json.sh  build-mant-cli.ts  build-mant.ts  c-compiler.ts  ci.ts  dev.ts  package-release.ts  real-smoke.tsx  release-platform.ts
src/: cli.ts  mant.ts
src/cli/: arguments.ts  run.ts
src/core/: fetcher.ts  groff-parser.ts  index.ts  mandoc-parser.ts  parser-utils.ts  parser.ts  process.ts  roff-ast.ts  section-tree.ts  sidecar-cache.ts  types.ts
src/native/: client.ts  index.ts  process.ts  schema.ts
src/output/: index.ts  markdown.ts
src/query/: index.ts  query.ts  schema.ts
src/tldr/: cache-paths.ts  cache.ts  index.ts  parser.ts  types.ts
src/ui/: Pre.tsx  app.tsx  block-content.tsx  ids.ts  inline-content.tsx  manual-content.tsx  manual-sidebar.tsx  menu-bar.tsx  navigation-tree.ts  search-highlight.tsx  search.ts  status-bar.tsx  use-deferred-navigation-sync.ts  use-page-search.ts  use-sidebar-resize.ts
tests/contracts/: minimal-query-v1.json  minimal-query-v2.json  minimal-query-v3.json
tests/e2e/ui/: app.test.tsx  manual-fixtures.ts  navigation.test.tsx  rendering.test.tsx  search.test.tsx  test-support.tsx
tests/fixtures/: mock-result.ts
tests/fixtures/man-pages/: gcc.html  groff-git.html  index.ts  ls.html  mandoc-git.html  mandoc-ls.html
tests/fixtures/roff/: alias-mdoc.1  minimal-mdoc.1  unsupported-mdoc.1
tests/integration/: cli.test.ts  native-cli.test.ts  native-differential.test.ts  native-schema.test.ts
tests/integration/core/: real-renderers.test.ts  roff-ast-sidecar.test.ts
tests/unit/cli/: arguments.test.ts  run.test.ts
tests/unit/core/: fetcher.test.ts  git-parser.test.ts  groff-parser.test.ts  indent-e2e.test.ts  mandoc-parser.test.ts  parser-utils.test.ts  parser.test.ts  process.test.ts  renderer-fixtures.test.ts  roff-ast.test.ts  section-tree.test.ts  sidecar-cache.test.ts
tests/unit/native/: client.test.ts  process.test.ts  schema.test.ts
tests/unit/output/: markdown.test.ts
tests/unit/query/: query.test.ts
tests/unit/scripts/: c-compiler.test.ts  release.test.ts
tests/unit/tldr/: cache.test.ts
tests/unit/ui/: navigation-tree.test.ts  search.test.ts
(+60 files in other folders)
