[workspace]
members = [
  "crates/mant-ast",
  "crates/mant-cli",
  "crates/mant-core",
  "crates/mant-mandoc-sys",
]
resolver = "3"

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
publish = false

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[workspace.dependencies]
clap = { version = "4.6.2", default-features = false, features = ["derive", "error-context", "help", "std", "suggestions", "usage"] }
schemars = "=1.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"
