[package]
name = "mant-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
grep-matcher.workspace = true
grep-regex.workspace = true
mant-ast = { path = "../mant-ast" }
libmandoc-rs = { path = "../libmandoc-rs" }
pulldown-cmark.workspace = true
# scraper 0.26 and 0.27 use let-chains stabilized after ManT's Rust 1.88 MSRV.
scraper = "0.25.0"
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
