[package]
name = "mant-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
grep-matcher.workspace = true
grep-regex.workspace = true
mant-ast = { path = "../mant-ast" }
libmandoc-rs = { path = "../libmandoc-rs" }
pulldown-cmark.workspace = true
# Keep this explicit so parser upgrades remain visible in dependency reviews.
scraper = "0.27.0"
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
