[package]
name = "libmandoc-rs"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0 AND ISC AND BSD-2-Clause AND BSD-3-Clause"
description = "Safe, owned Rust interface to the vendored libmandoc parser"
repository = "https://github.com/BryanHeBY/ManT"
readme = "README.md"
keywords = ["man", "mdoc", "roff", "mandoc", "parser"]
categories = ["parser-implementations", "text-processing"]
include = [
  "/Cargo.toml",
  "/README.md",
  "/THIRD_PARTY_NOTICES.md",
  "/LICENSES/**",
  "/build.rs",
  "/config/**",
  "/shim/**",
  "/src/**",
  "/vendor/mandoc-1.14.6/**",
]
publish = true
links = "libmandoc_rs"

[dependencies]
zstd.workspace = true

[build-dependencies]
cc = "1"

[lints]
workspace = true
