[package]
name = "mant-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
mant-ast = { path = "../mant-ast" }
mant-core = { path = "../mant-core" }
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
