[package]
name = "mant-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
mant-ast = { path = "../mant-ast" }
mant-mandoc-sys = { path = "../mant-mandoc-sys" }
scraper = "0.24.0"
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
