[package]
name = "mant-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
mant-ast = { path = "../mant-ast" }
mant-mandoc-sys = { path = "../mant-mandoc-sys" }
# scraper 0.26 and 0.27 use let-chains stabilized after Mant's Rust 1.85 MSRV.
scraper = "0.25.0"
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
